<resources>
    <string name="app_name">LogInAndroid</string>
    <string name="PocketChef">Pocket Chef</string>
    <string name="Email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="rpassword">Repetir contraseña</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="Registro">Resgistrate</string>
    <string name="remember">Recordarme?</string>
    <string name="atras">Atras</string>
    <string name="registrarme">Registrarme</string>
    <string name="username">Nombre De Usuario</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="title_activity_recipe">recipe</string>
    <string name="kcal">KCal: </string>
    <string name="tipo">Tipo: </string>
    <string name="creado">Creado por </string>
    <string name="pasos">Pasos: </string>
    <string name="ingredientes">Ingredientes: </string>
    <string name="verificado">Verificado: </string>
    <string name="nodata">(No data)</string>
</resources>